--- a/resume_priya.html
+++ b/resume_priya.html
@@ -24,6 +24,7 @@
             <th>Board/University</th>
             <th>Year of Passing</th>
             <th>Percentage</th>
+            <h1>welcome</h1>
         </tr>
         <tr>
             <td>S.S.L.C.</td>
